# ximea_camera_opencv_examle

./: CMakeLists.txt  package.xml  view_ximea_camera.cpp
src/: view_ximea_camera.cpp
