<?xml version="1.0"?>
<package format="2">
    <name>ximea_camera_opencv_example</name>
    <version>0.0.1</version>
    <description>Sample application for XIMEA camera and OpenCV in ROS</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <maintainer email="mwiechmann@techfak.uni-bielefeld.de">Martin Wiechmann</maintainer>

    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>GPLv3</license>

    <!-- Url tags are optional, but mutiple are allowed, one per tag -->
    <!-- Optional attribute type can be: website, bugtracker, or repository -->
    <!-- Example: -->
    <!--<url type="website"></url>-->

    <!-- Author tags are optional, mutiple are allowed, one per tag -->
    <!-- Authors do not have to be maintianers, but could be -->
    <!-- Example: -->
    <author email="mwiechmann@techfak.uni-bielefeld.de">Martin Wiechmann</author> -->

    <!-- The *_depend tags are used to specify dependencies -->
    <!-- Dependencies can be catkin packages or system dependencies -->
    <!-- Examples: -->
    <!-- Use build_depend for packages you need at compile time: -->
    <!--<build_depend>catkin</build_depend>-->
    <!--<run_depend>message_runtime</run_depend>-->
</package>